datepicker component included (full implmntation)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/themes/light2.min.css" rel="stylesheet" type="text/css" id="style_color" />
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
-
+  <!--<link href="/node_modules/react-datepicker/dist/react-datepicker.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
     <div id="root"></div>
