--- a/index.html
+++ b/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>React</title>
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css" />
+
+<head>
+  <title>React</title>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+    crossorigin="anonymous">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet" type="text/css"
+  />
   <!-- BEGIN THEME GLOBAL STYLES -->
-  <link href="http://keenthemes.com/preview/metronic/theme/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
-  <link href="http://keenthemes.com/preview/metronic/theme/assets/global/css/plugins.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://keenthemes.com/preview/metronic/theme/assets/global/css/components.min.css" rel="stylesheet" id="style_components"
+    type="text/css" />
+  <link href="http://keenthemes.com/preview/metronic/theme/assets/global/css/plugins.min.css" rel="stylesheet" type="text/css"
+  />
   <!-- END THEME GLOBAL STYLES -->
   <!-- BEGIN THEME LAYOUT STYLES -->
-  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
-  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/themes/light2.min.css" rel="stylesheet" type="text/css" id="style_color" />
-  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
+  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css"
+  />
+  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/themes/light2.min.css" rel="stylesheet"
+    type="text/css" id="style_color" />
+  <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css"
+  />  
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="text/javascript" src="dist/bundle.js"></script>
-  </body>
+</head>
+<body>
+  <div id="root"></div>
+  <script type="text/javascript" src="dist/bundle.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.6/highcharts.js"></script>-->
+</body>
 </html>
