--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.6/highcharts.js"></script>
     <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
