--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-  <div id="root"></div>
+  <div id="myAttendance"></div>
   <script type="text/javascript" src="dist/bundle.js"></script>
   <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/5.0.6/highcharts.js"></script>-->
 </body>
