--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   </head>
   <body>
-    <div id="root"></div>
+    <div id="myTimesheet"></div>
     <script type="text/javascript" src="dist/bundle.js"></script>
   </body>
 </html>
