React Calender control using CDN

--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/layout.min.css" rel="stylesheet" type="text/css" />
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/themes/light2.min.css" rel="stylesheet" type="text/css" id="style_color" />
   <link href="http://keenthemes.com/preview/metronic/theme/assets/layouts/layout/css/custom.min.css" rel="stylesheet" type="text/css" />
+  
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/react-datepicker/0.39.0/react-datepicker.min.css" rel="stylesheet" type="text/css" />
   <!--<link href="/node_modules/react-datepicker/dist/react-datepicker.css" rel="stylesheet" type="text/css" />-->
   </head>
   <body>
     <div id="root"></div>
     <script type="text/javascript" src="dist/bundle.js"></script>
+    <script type="text/javascript" src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/jquery.min.js"></script>
+    <script type="text/javascript" src="http://keenthemes.com/preview/metronic/theme/assets/global/plugins/bootstrap/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://keenthemes.com/preview/metronic/theme/assets/global/scripts/app.min.js"></script>
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react-datepicker/0.39.0/react-datepicker.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js"></script>
+
   </body>
 </html>
